# hackeurope-26

./: .env  sample_kimik2.5_nvidia_free.py  tempCodeRunnerFile.py
Alex/: TASK_ID_SYSTEM.md  batch_generate_requests.py  check_leaf_complexity.py  complexity_evaluator.py  demo_task_hierarchy.py  sample_domains.json  sample_kimik2.5_generate_domains.py  sample_kimik2.5_nvidia_free.py  sample_kimik2.5_random_prompts.py
Alex/cleaned_requests/: 20260221T145854Z_34bc49fdc8834488af68950a67d22073.json  (+12 more)
Kai/: .env.example  CLAUDE.md  SYSTEM_OVERVIEW_FOR_TEAMMATE.md  pyproject.toml
Kai/app/: config.py  main.py
Kai/app/agents/: builder.py  orchestra.py
Kai/app/api/: activity.py  automation.py  blocks.py  chat.py  dependencies.py  pipelines.py  webhooks.py
Kai/app/blocks/definitions/: think.json
Kai/app/blocks/implementations/communicate/: interactive.py  notify_in_app.py
Kai/app/blocks/implementations/remember/: memory_ops.py
Kai/app/blocks/implementations/think/: claude_decide.py  claude_extra.py  claude_summarize.py
Kai/app/engine/: clarifier.py  doer.py  execution_utils.py  executor.py  memory.py  scheduler.py  thinker.py  thinker_stream.py
Kai/app/llm/: service.py
Kai/app/memory/: store.py
Kai/app/models/: block.py
Kai/app/registry/: __init__.py  registry.py
Kai/app/storage/: __init__.py  memory.py
Kai/frontend/src/app/chat/: page.tsx
Kai/frontend/src/lib/: api.ts  sse.ts
Kai/scripts/: seed_blocks.py  supabase_schema.sql
Kai/tests/: test_models.py
Kai/tests/test_blocks/: test_executor.py  test_implementations.py  test_registry.py
