[project]
name = "kai-backend"
version = "0.1.0"
description = "Kai backend service"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.20",
  "anthropic>=0.42",
  "google-generativeai>=0.8",
  "langgraph>=0.2",
  "httpx>=0.28",
  "beautifulsoup4>=4.12",
  "apscheduler>=3.10",
  "aiosqlite>=0.20",
  "sqlalchemy>=2.0",
  "stripe>=11.0",
  "sendgrid>=6.11",
  "elevenlabs>=2.30",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
]
