[project]
name = "kai-backend"
version = "0.1.0"
description = "Kai backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.20",
  "openai>=1.0",
  "google-generativeai>=0.8",
  "httpx>=0.28",
  "beautifulsoup4>=4.12",
  "apscheduler>=3.10",
  "supabase>=2.4",
  "stripe>=11.0",
  "sendgrid>=6.11",
  "elevenlabs>=2.30",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
]
